--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -104,7 +104,7 @@
                         <div class="col-sm-4">
                             <div class="service-item">
                                 <span class="fa-stack fa-5x">
-                                <img src="img/campaign/PEC.gif">
+                                <img src="img/campaign/PEC.gif" style="max-height: 100%; height: auto; width:auto">
                             </span>
                                 <h4>
                                     <strong>PEC</strong>
@@ -191,6 +191,9 @@
                 <!-- /.col-lg-10 -->
             </div>
             <!-- /.row -->
+	        <div class="row text-center">
+	            	<p>Help us identify additional partners in Philadelphia by emailing us at info@codedbykids.com</p>
+	        </div>
         </div>
         <!-- /.container -->
     </section>
@@ -216,8 +219,7 @@
                       </div>
                   </div>
                     <h2 style="color: white">Contribute to our Campaign</h2>
-                    <p>Lorem ipsum dolor sit amet, integer mollis, nonummy vestibulum magna nec sit, nunc magna nec urna vitae turpis at,
-                       adipiscing eget. A dolor justo. </p>
+                    <p>Every little bit counts. Make your impact on Philadelphia's workforce of the future today!</p>
                   </div>
                   <div class="col-sm-4">
                     <div class="service-item">
@@ -240,8 +242,9 @@
                     <h2 style="color: white">Spread the Word</h2>
                     <p>Send emails to friends, family, coworkers and anyone else you may know to encourage them to support the campaign
                       in some way. We’ve drafted some sample emails for you below!</p>
-                      <a href="https://docs.google.com/document/d/1fqVT1vbJTE1GVscSWvxT_ndDZI7Yj1_-e4_a6o3AEwA/edit" target="_blank">For Employers</a> <br>
-                      <a href="https://docs.google.com/document/d/1qR5a-OgOAYqRfN3KiO0lEVUkjitr_OELKi8FsRqtcwY/edit" target="_blank">For Friends and Family</a>
+                      <a href="https://drive.google.com/file/d/0B1CZOG3Mwf6FRUVmQnI3aG9JbWM/view?usp=sharing" target="_blank">One Pager</a><br>
+                      <a href="https://docs.google.com/document/d/1fqVT1vbJTE1GVscSWvxT_ndDZI7Yj1_-e4_a6o3AEwA/edit?usp=sharing" target="_blank">For Employers</a> <br>
+                      <a href="https://docs.google.com/document/d/1qR5a-OgOAYqRfN3KiO0lEVUkjitr_OELKi8FsRqtcwY/edit?usp=sharing" target="_blank">For Friends and Family</a>
                   </div>
                 <div>
               </div>
@@ -249,15 +252,13 @@
       </div>
     </section>
 
-    <section id="team" class="services" style="background-color: white">
+    <section id="team" class="services" style="background-color: #eee">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Our Team</h2>
-                    <hr class="small">
                     <div class="row">
-                      <div class="col-sm-4 col-sm-push-2 text-center">
-                        <img class="reg-img img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                      <div class="col-sm-10 col-sm-push-1 text-center">
                         <h3>Sylvester Mobley <br>
                             <small>Operations Manager</small>
                         </h3>
@@ -267,8 +268,9 @@
                            works to use technology education to fight the conditions that contribute to systemic poverty, such as the
                            lack of meaningful employment opportunities in many communities.</p>
                       </div>
-                      <div class="col-sm-4 col-sm-push-2">
-                          <img class="reg-img img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                      </div>
+                      <div class="row">
+                      <div class="col-sm-6 text-center">                      
                           <h3>Maggie Deptola <br>
                               <small>Operations Manager</small>
                           </h3>
@@ -277,10 +279,8 @@
                               Philadelphia’s diverse communities as both a student and resident. She has experienced firsthand how this diversity is
                                not reflected in the tech scene, and is a strong advocate for using education as a catalyst for social change. </p>
                       </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-sm-4 text-center">
-                          <img class="reg-img img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                    
+                      <div class="col-sm-6 text-center">                         
                           <h3>Michaela Ochnich <br>
                               <small>Chief Technology Officer</small>
                           </h3>
@@ -289,8 +289,9 @@
                               and skills necessary to have a successful career in tech, she is passionate about ensuring students have hands-on experience
                               with the development process.</p>
                       </div>
-                      <div class="col-sm-4 text-center">
-                          <img class="reg-img img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                      </div>
+                      <div class="row">
+                      <div class="col-sm-6 text-center">                     
                           <h3>Danae Mobley <br>
                               <small>Chief Experience Officer</small>
                           </h3>
@@ -298,8 +299,7 @@
                             She brings this passion for equity to her role as the Chief Learning Officer for Coded by Kids and is committed
                             to fostering a culture of engagement and enthusiasm in order to build the next generation of innovators. </p>
                       </div>
-                      <div class="col-sm-4 text-center">
-                          <img class="reg-img img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                      <div class="col-sm-6 text-center">
                           <h3>Ross Coley <br>
                               <small>Program Support Coordinator</small>
                           </h3>
