--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -44,7 +44,8 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center" style="padding-top: 75px;">
-            <h1 style="color: white;">Thank you for supporting our #CbK300 crowdfunding campaign!</h1>
+            <h1 style="color: white;">Thank you for supporting our #CbK300 <a href="https://www.indiegogo.com/projects/help-300-philly-students-learn-to-code-every-week-community-innovation--2/x/14823474#/" target="_blank"
+            style="color: white">crowdfunding campaign!</a></h1>
             <div class="content" style="text-align: left; padding: 15px;">
             <p>We’re turning community spaces into technology education centers for Philadelphia’s youth. We are working to ensure that
               regardless of who they are, where they come from, and what resources they have, all Philadelphia youth have access to the
@@ -52,7 +53,7 @@
             <p>We’ve successfully run programs for three years, reaching almost 100 students every week in their communities and schools.
               We have the vision and plan in place to reach more students and have a more significant impact today, if we raise the funding
                to support our goals. </p>
-            <p>Find out more about our 2016 partners and ways you can support and promote the campaign below!</p>
+            <p>Find out more about our 2016 partners and ways you can support and promote the <a href="https://www.indiegogo.com/projects/help-300-philly-students-learn-to-code-every-week-community-innovation--2/x/14823474#/" target="_blank">campaign</a> below!</p>
           </div>
             <div class="row">
               <div class="col-sm-4">
@@ -215,10 +216,11 @@
                   <div class="col-sm-4">
                     <div class="service-item">
                       <div>
-                        <a href="https://www.indiegogo.com/" target="_blank"><img src="img/campaign/indiegogo.png" style="height: 7em; width: auto"></a>
+                        <a href="https://www.indiegogo.com/projects/help-300-philly-students-learn-to-code-every-week-community-innovation--2/x/14823474#/" target="_blank"><img src="img/campaign/indiegogo.png" style="height: 7em; width: auto"></a>
                       </div>
                   </div>
-                    <h2 style="color: white">Contribute to our Campaign</h2>
+                    <h2 style="color: white"><a href="https://www.indiegogo.com/projects/help-300-philly-students-learn-to-code-every-week-community-innovation--2/x/14823474#/" target="_blank"
+                    style="text-decoration: none; color:white">Contribute to our Campaign</a></h2>
                     <p>Every little bit counts. Make your impact on Philadelphia's workforce of the future today!</p>
                   </div>
                   <div class="col-sm-4">
