--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul id="nav" class="nav navbar-nav navbar-right">
+              <li><a class="special-text" href="https://www.indiegogo.com/projects/help-300-philly-students-learn-to-code-every-week-community-innovation--2#/">Support Our Crowdfunding Campaign</a></li>
               <li><a href="about.html#about-us">About</a></li>
               <li><a href="partner.html#partner">Partner</a></li>
               <li><a href="programs.html#programs">Programs</a></li>
@@ -147,7 +148,7 @@
           </div>
         </div>
         <br>
-  
+
         <div class="row">
             <div class="col-sm-6 sec-text-general-l">
               <h3 class="number-large">01.</h3>
