added paypal button and updated about text for 501c3

--- a/about.html
+++ b/about.html
@@ -96,6 +96,9 @@
     <div class="row">
       <div class="sec-text">
         <p>
+          Coded by Kids is a 501c3 nonprofit organization.
+          <br>
+          <br>
           We provide computer science education programs to children between the ages of 5 and 18 years
           old. Our educational philosophy emphasizes project-based learning and mentorship, enabling
           students to develop meaningful projects while interacting with experienced industry
