--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul id="nav" class="nav navbar-nav navbar-right">
-              <li><a class="special-text" href="https://www.indiegogo.com/projects/help-300-philly-students-learn-to-code-every-week-community-innovation--2#/">Support Our Crowdfunding Campaign</a></li>
+              <li><form id="paypal-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="hosted_button_id" value="VSFLJWGK4W4E8">
+    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+    <img id="paypal" alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form></li>
               <li><a href="about.html#about-us">About</a></li>
               <li><a href="partner.html#partner">Partner</a></li>
               <li><a href="programs.html#programs">Programs</a></li>
@@ -45,6 +50,9 @@
 
     <div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
       <div class="" id="sec-1">
+        <div class="row">
+
+        </div>
         <div class="row" id="main-heading">
           <div class="col-md-12" id="home">
             <h1>Project Based Tech Education Programs For Children</h1>
