--- a/index.html
+++ b/index.html
@@ -336,6 +336,99 @@
       </div>
     </div><!--End Slide 4-->
 
+    <!--Slide 5-->
+    <div class="slide" id="slide5" data-slide="5" data-stellar-background-ratio="0">
+      <div class="" id="sec-3">
+        <div class="top-border" id="volunteers">
+
+        </div>
+        <div class="row" id="">
+          <div class="col-md-12 title">
+            <h2 class="sec-title-dark">Our Sponsors</h2>
+          </div>
+        </div>
+        <div class="main-border"></div>
+
+        <div class="row-fluid" style="padding: 20px">
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="https://www.att.com/"  target="_blank">
+                  <img class="img-responsive" src="img/sponsors/att.png">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://www.cloudamize.com/"  target="_blank">
+                  <img class="img-responsive" src="img/sponsors/cloudamize.png">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="https://duckduckgo.com/"  target="_blank">
+                  <img class="img-responsive" src="img/sponsors/duckduckgo.png">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://firstround.com/"  target="_blank">
+                  <img src="img/sponsors/firstround.png" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="https://www.getguru.com/"  target="_blank">
+                  <img src="img/sponsors/guru.png" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://houwzer.com/"  target="_blank">
+                <img src="img/sponsors/houwzer.png" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://www.integrichain.com/"  target="_blank">
+                  <img src="img/sponsors/integrichain.png" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://www.missionog.com/"  target="_blank">
+                  <img src="img/sponsors/missionog.png" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="https://www.revzilla.com/"  target="_blank">
+                  <img src="img/sponsors/revzilla.png" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://www.sealworks.com/"  target="_blank">
+                  <img src="img/sponsors/sealworks.png" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://www.sumoheavy.com/"  target="_blank">
+                  <img src="img/sponsors/sumo.png" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://www.tammantech.com/"  target="_blank">
+                  <img src="img/sponsors/tamman.png" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://tinyletter.com/christopherwink"  target="_blank">
+                  <img src="img/sponsors/tidsy.jpg" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://lerner.udel.edu/centers/experiential-learning-centers/horn-program-in-entrepreneurship/"  target="_blank">
+                  <img src="img/sponsors/ud.png" class="img-responsive">
+              </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 sponsor">
+              <a class="thumbnail" href="http://zfeldman.com/"  target="_blank">
+                  <img src="img/sponsors/zach.png" class="img-responsive">
+              </a>
+            </div>
+        </div>
+      </div><!--end sec-5-->
+    </div> <!--end slide 5-->
+
     <footer>
       <div class="row">
         <div class="col-xs-12 sec-text-small">
