--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul id="nav" class="nav navbar-nav navbar-right">
-              <li><form id="paypal-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-    <input type="hidden" name="cmd" value="_s-xclick">
-    <input type="hidden" name="hosted_button_id" value="VSFLJWGK4W4E8">
-    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-    <img id="paypal" alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-    </form></li>
+              <li><a href="https://codedbykids.herokuapp.com/donate/cbk" class="btn btn-donate">Donate!</a></li>
               <li><a href="about.html#about-us">About</a></li>
               <li><a href="partner.html#partner">Partner</a></li>
               <li><a href="programs.html#programs">Programs</a></li>
