--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,700,800' rel='stylesheet' type='text/css'>
     <script src="https://use.fontawesome.com/f35d74575d.js"></script>
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+     ga('create', 'UA-102389893-1', 'auto');
+      ga('send', 'pageview');
+
+  </script>
+
   </head>
 
   <body>
