--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
           </div><!--/.nav-collapse -->
       </nav>
     </div>
-
+	<div class="row" id="callout">
+		<p>
+			Help us reach our goal to run programs in 20 Philly schools this school year! Attend our fundraiser on Oct 12!
+			<a href="https://coded-by-kids.ticketleap.com/20-for-20/" target="_blank" class="btn btn-default">Learn More</a>
+		</p>
+    </div>
     <div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
       <div class="" id="sec-1">
         <div class="row">
