--- a/competition.html
+++ b/competition.html
@@ -14,6 +14,8 @@
 
     <!--custom-->
     <link rel="stylesheet" href="./css/comp.css" type="text/css">
+    <!--fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
   </head>
 
   <body>
@@ -63,14 +65,14 @@
             <img src="./img/comp/hero.jpg" class="img-fluid" id="scheduleImg">
           </div>
           <div class="col-md-9">
-            <h1>Contest Schedule</h1>
+            <h1 class="bold"><span class="blue">CONTEST</span> <br> <span class="red">SCHEDULE</span></h1>
           </div>
         </div>
 
 
         <!--rules-->
         <div class="row container-fluid noSpace" id="rules">
-          <h1>Contest Rules</h1>
+          <h1 class="bold">CONTEST RULES</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fermentum odio eu feugiat pretium nibh. Ultrices dui sapien eget mi proin sed libero enim. Id velit ut tortor pretium viverra suspendisse potenti nullam. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Volutpat blandit aliquam etiam erat velit scelerisque in. Quam viverra orci sagittis eu. Et sollicitudin ac orci phasellus egestas tellus. Pellentesque elit eget gravida cum sociis natoque penatibus. Odio aenean sed adipiscing diam donec. Quam viverra orci sagittis eu volutpat odio. Cras tincidunt lobortis feugiat vivamus at augue eget arcu. Augue lacus viverra vitae congue eu consequat ac felis donec. Diam donec adipiscing tristique risus. Erat velit scelerisque in dictum non consectetur a erat nam. Semper eget duis at tellus. At elementum eu facilisis sed odio morbi quis. Tristique risus nec feugiat in. Ac placerat vestibulum lectus mauris ultrices eros in cursus. Nulla pellentesque dignissim enim sit amet.</p>
         </div>
 
