basic layout and responsiveness for prize section

--- a/competition.html
+++ b/competition.html
@@ -54,9 +54,34 @@
 
         <!--code compete section-->
         <div class="container-fluid noSpace" id="code">
-          <h1>code, compete & conquer!</h1>
+          <h1 class="bold">code, compete & conquer!</h1>
           <p>On June 23rd, the top 10 teams will present their projects
             to a team of live judges, and cash prizes will be awarded to the best projects.</p>
+
+          <div class="container" id="prizes">
+            <div class="row">
+              <div class="col-md-2">
+                <img src="./img/comp/prize_icon_2.svg" id="prize2" class="image-fluid mx-auto d-block">
+              </div>
+              <div class="col-md-10" style="padding-top: 2vh;">
+                <div class="row">
+                  <div class="col-md-4">
+                    <h3 class="text-md-left">1st Place: $1,000</h3>
+                  </div>
+                  <div class="col-md-4">
+                    <h3 class="text-md-left">2nd Place: $750</h3>
+                  </div>
+                  <div class="col-md-4">
+                    <h3 class="text-md-left">3rd Place: $500</h3>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <h3 class="text-md-left">Two Honorable Mention Awards: $250</h3>
+                  </div>
+                </div>
+            </div>
+          </div>
         </div>
 
         <!--schedule-->
