basic layout and responsiveness for contest schedule section

--- a/competition.html
+++ b/competition.html
@@ -80,18 +80,88 @@
                     <h3 class="text-md-left">Two Honorable Mention Awards: $250</h3>
                   </div>
                 </div>
+              </div>
             </div>
           </div>
         </div>
 
         <!--schedule-->
         <div class="row container-fluid noSpace" id="schedule">
-          <div class="col-md-3">
-            <img src="./img/comp/hero.jpg" class="img-fluid" id="scheduleImg">
+          <div class="col-md-4" id="scheduleImg">
+            <!--<img src="./img/comp/hero.jpg" class="img-fluid" id="scheduleImg">-->
           </div>
-          <div class="col-md-9">
+          <div class="col-md-8" style="padding-left: 3em; padding-top: 5vh; padding-bottom: 5vh;">
             <h1 class="bold"><span class="blue">CONTEST</span> <br> <span class="red">SCHEDULE</span></h1>
-          </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elit ante, venenatis id convallis
+               non, porta a enim. Aliquam tincidunt sit amet felis quis imperdiet. Sed nec nisl semper, volutpat
+               quam vel, pretium tellus. Nam vitae aliquam lectus, sit amet molestie ligula.
+               Integer turpis nisl, imperdiet id fermentum sed, gravida a eros. </p>
+            <!--dates-->
+            <div class="container" id="dates">
+              <div class="row justify-content-start">
+                <div class="col-md-5">
+                  <h4>March 1, 2018</h4>
+                </div>
+                <div class="col-sm-auto">
+                  <h4 class="text-md-left">Online Application Opens</h4>
+                </div>
+              </div>
+              <div class="row justify-content-start">
+                <div class="col-md-5">
+                  <h4>April 1, 2018</h4>
+                </div>
+                <div class="col-sm-auto">
+                  <h4 class="text-md-left">Online Application Closes at 5pm EST</h4>
+                </div>
+              </div>
+              <div class="row justify-content-start">
+                <div class="col-md-5">
+                  <h4>April 20, 2018</h4>
+                </div>
+                <div class="col-sm-auto">
+                  <h4 class="text-md-left">Meetup 1: Refining Your Project/Idea</h4>
+                </div>
+              </div>
+              <div class="row justify-content-start">
+                <div class="col-md-5">
+                  <h4>May 18, 2018</h4>
+                </div>
+                <div class="col-sm-auto">
+                  <h4 class="text-md-left">Meetup 2:Preparing for Submission</h4>
+                </div>
+              </div>
+              <div class="row justify-content-start">
+                <div class="col-md-5">
+                  <h4>June 1, 2018</h4>
+                </div>
+                <div class="col-sm-auto">
+                  <h4 class="text-md-left">Online Submission Due (Virtual Round)</h4>
+                </div>
+              </div>
+              <div class="row justify-content-start">
+                <div class="col-md-5">
+                  <h4>June 8, 2018</h4>
+                </div>
+                <div class="col-sm-auto">
+                  <h4 class="text-md-left">Teams Selected for Live Competition</h4>
+                </div>
+              </div>
+              <div class="row justify-content-start">
+                <div class="col-md-5">
+                  <h4>June 23, 2018</h4>
+                </div>
+                <div class="col-sm-auto">
+                  <h4 class="text-md-left">Live Competition</h4>
+                </div>
+              </div>
+            </div><!--end date container-->
+            <!--button container-->
+            <div class="row" style="padding-top: 5vh;">
+              <div class="col-md-5">
+                <button type="button" class="btn btn-primary btn-lg btn-block" id="download">Download Schedule</button>
+              </div>
+            </div>
+          </div> <!--end schedule text container-->
         </div>
 
 
